[project]
name = "fastapi_keycloak_manager"
version = "1.0.2"
description = "fastapi_keycloak_manager is a Python package that integrate FastAPI app and Keycloak IAM system."
# license = {file = "LICENSE"}
keywords = ["keycloak", "openid", "oidc", "fastapi", "Authentication", "Authorization", "Keycloak", "FastAPI"]
authors = [
    { name = "Dmitriy Romakin", email = "dvromakin@gmail.com" },
]
# maintainers = [
#     { name = "Dmitriy Romakin", email = "dvromakin@gmail.com" },
# ]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
]
# packages = [
#     { include = "fastapi_keycloak_manager", from = "src/" },
#     { include = "fastapi_keycloak_manager/**/*.py", from = "src/" },
#     { include = "fastapi_keycloak_manager/**/**/*.py", from = "src/" },
# ]
# include = ["LICENSE"]
requires-python = ">=3.8"
# dynamic = ["version", "description"]
dependencies = [
    "anyio>=3.4.0",
    "asgiref>=3.4.1",
    "certifi>=2021.10.8",
    "charset-normalizer>=2.0.9",
    "click>=8.0.3",
    "ecdsa>=0.17.0",
    "fastapi>=0.70.1",
    "idna>=3.3",
    "pyasn1>=0.4.8",
    "pydantic>=1.5a1",
    "python-jose>=3.3.0",
    "requests>=2.26.0",
    "rsa>=4.8",
    "six>=1.16.0",
    "sniffio>=1.2.0",
    "starlette>=0.16.0",
    "typing_extensions>=4.0.1",
    "urllib3>=1.26.7",
    "uvicorn>=0.16.0",
]

[project.urls]
"Homepage" = "https://github.com/dromakin/fastapi-keycloak"
# documentation = "https://fastapi-keycloak-manager.readthedocs.io/en/latest/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"